oc/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-svc
  namespace: demo
spec:
  selector:
    app: demoApp
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
